1.VideoPlayer,modify actions 2.OpenCamera,rename packages

--- a/OpenCamera_Library/src/main/res/values/strings.xml
+++ b/OpenCamera_Library/src/main/res/values/strings.xml
@@ -17,5 +17,5 @@
   -->
 
 <resources>
-    <string name="app_name">videorecorder_library</string>
+    <string name="app_name">OpenCamera_Library</string>
 </resources>
