--- a/OpenCamcorder_Library/src/main/res/values-zh-rCN/strings.xml
+++ b/OpenCamcorder_Library/src/main/res/values-zh-rCN/strings.xml
@@ -35,4 +35,12 @@
     <!--<string name="access_sd_fail" product="nosdcard" msgid="7361816489339518850">"访问 USB 存储设备失败。"</string>-->
     <string name="access_sd_fail" product="default" msgid="4427585260986849912">"无法访问 SD 卡。"</string>
     <string name="spaceIsLow_content" product="default" msgid="1732882643101247179">"SD 卡空间不足，请更改照片品质设置，或删除某些照片或者其他文件。"</string>
+
+    <!--<string name="pref_camera_flashmode_title" msgid="2287362477238791017">"闪光模式"</string>-->
+    <!--<string name="pref_camera_flashmode_entry_auto" msgid="7288383434237457709">"自动"</string>-->
+    <!--<string name="pref_camera_flashmode_entry_on" msgid="5330043918845197616">"开"</string>-->
+    <!--<string name="pref_camera_flashmode_entry_off" msgid="867242186958805761">"关"</string>-->
+
+
+    <string name="video_camera_label" msgid="2899292505526427293">"摄像机"</string>
 </resources>
